tests/same_name_on_different_branches.c
//@FAIL
int main() {
    if (1) {
        int x = 5;
    } else {
        int x = 10;
    }

    return x;
}